<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/account_scroll"
    android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:clipToPadding="false">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="@dimen/space_lg" android:gravity="center_horizontal">
        <ImageView android:layout_width="148dp" android:layout_height="176dp" android:src="@drawable/marv_welcome" android:scaleType="fitCenter" android:importantForAccessibility="no" android:contentDescription="@null" />
        <TextView android:id="@+id/heading" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_lg"
            android:text="@string/account_signed_out" android:textAppearance="@style/TextAppearance.Marvel.Display" android:fontFamily="@font/bebas_neue_regular" app:fontFamily="@font/bebas_neue_regular" />
        <TextView android:id="@+id/name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_md" android:textAppearance="@style/TextAppearance.Marvel.Title" android:fontFamily="@font/bebas_neue_regular" app:fontFamily="@font/bebas_neue_regular" android:visibility="gone" />
        <TextView android:id="@+id/email" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_sm" android:textAppearance="@style/TextAppearance.Marvel.Body" android:visibility="gone" />
        <TextView android:id="@+id/message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_lg"
            android:text="@string/account_sign_in_body" android:textAppearance="@style/TextAppearance.Marvel.Body" />
        <com.google.android.material.button.MaterialButton android:id="@+id/action" style="@style/Widget.Marvel.Button.Primary" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg" android:text="@string/auth_sign_in" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
