<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background_app">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/content_shell" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintWidth_max="@dimen/content_max_width" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent">
        <FrameLayout android:id="@+id/header" android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
          <LinearLayout android:id="@+id/main_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="68dp"
            android:orientation="vertical" android:gravity="center_vertical" android:paddingStart="@dimen/screen_padding" android:paddingEnd="@dimen/screen_padding" android:paddingTop="@dimen/space_sm" android:paddingBottom="@dimen/space_sm">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:baselineAligned="false">
            <com.google.android.material.button.MaterialButton android:id="@+id/header_back" style="@style/Widget.Marvel.AuthLink" android:layout_width="48dp" android:layout_height="48dp" android:padding="0dp" android:visibility="gone" android:contentDescription="@string/catalog_back" app:icon="@drawable/ic_catalog_back" app:iconSize="20dp" app:iconTint="@color/marvel_text" app:iconGravity="textStart" app:iconPadding="0dp" />
            <Space android:id="@+id/header_expanded_spacer" android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1" android:visibility="gone" />
            <LinearLayout android:id="@+id/title_header" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                android:orientation="vertical" android:layout_marginEnd="@dimen/space_md">
                <TextView android:id="@+id/brand_caption" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/brand_caption"
                    android:textAppearance="@style/TextAppearance.Marvel.Caption" />
                <TextView android:id="@+id/screen_title" android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/nav_home" android:textAppearance="@style/TextAppearance.Marvel.Title" android:fontFamily="@font/bebas_neue_regular" app:fontFamily="@font/bebas_neue_regular" />
            </LinearLayout>
            <LinearLayout android:id="@+id/user_header" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                android:layout_marginEnd="@dimen/space_md" android:orientation="horizontal" android:gravity="center_vertical" android:visibility="gone">
                <com.google.android.material.imageview.ShapeableImageView android:id="@+id/user_avatar" android:layout_width="40dp" android:layout_height="40dp"
                    android:src="@drawable/ic_profile_avatar" android:background="@color/marvel_surface_raised" android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Marvel.Avatar" android:contentDescription="@string/home_profile_avatar" />
                <LinearLayout android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:layout_marginStart="12dp" android:orientation="vertical">
                    <TextView android:id="@+id/user_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:fontFamily="@font/barlow_semibold"
                        android:textSize="16sp" android:textColor="@color/marvel_text" android:maxLines="2" android:ellipsize="end" />
                    <TextView android:id="@+id/user_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp"
                        android:textAppearance="@style/TextAppearance.Marvel.Caption" android:maxLines="2" android:ellipsize="end" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:layout_width="76dp" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal"
                android:contentDescription="@string/brand_content_description" android:importantForAccessibility="yes">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/brand_sua" android:gravity="center"
                    android:fontFamily="@font/bebas_neue_regular" app:fontFamily="@font/bebas_neue_regular" android:textColor="@color/marvel_text" android:textSize="15sp"
                    android:includeFontPadding="false" android:importantForAccessibility="no" />
                <ImageView android:layout_width="76dp" android:layout_height="33dp" android:layout_marginTop="4dp" android:scaleType="fitCenter"
                    android:src="@drawable/logo_marvel" android:contentDescription="@null" android:importantForAccessibility="no" />
            </LinearLayout>
            </LinearLayout>
            <TextView android:id="@+id/expanded_screen_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Marvel.CatalogHeader" android:gravity="center" android:visibility="gone" />
          </LinearLayout>
          <LinearLayout android:id="@+id/auth_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="106dp"
              android:orientation="vertical" android:gravity="center_horizontal" android:paddingBottom="12dp" android:visibility="gone"
              android:contentDescription="@string/brand_content_description" android:importantForAccessibility="yes">
              <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/brand_sua" android:gravity="center"
                  android:fontFamily="@font/bebas_neue_regular" app:fontFamily="@font/bebas_neue_regular" android:textColor="@color/marvel_text" android:textSize="20sp"
                  android:includeFontPadding="false" android:importantForAccessibility="no" />
              <ImageView android:layout_width="169dp" android:layout_height="73dp" android:layout_marginTop="2dp" android:scaleType="fitCenter"
                  android:src="@drawable/logo_marvel" android:contentDescription="@null" android:importantForAccessibility="no" />
          </LinearLayout>
        </FrameLayout>
        <androidx.fragment.app.FragmentContainerView android:id="@+id/nav_host" android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp" android:layout_height="0dp" android:background="@drawable/background_panel"
            app:defaultNavHost="true" app:navGraph="@navigation/main_graph" app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
        <com.google.android.material.bottomnavigation.BottomNavigationView android:id="@+id/bottom_navigation"
            android:layout_width="0dp" android:layout_height="@dimen/navigation_min_height" android:minHeight="@dimen/navigation_min_height"
            android:layout_marginStart="@dimen/space_lg" android:layout_marginEnd="@dimen/space_lg"
            android:layout_marginTop="@dimen/space_lg" android:layout_marginBottom="@dimen/space_lg"
            android:background="@drawable/background_navigation" android:paddingTop="0dp" android:paddingBottom="0dp"
            app:elevation="18dp" app:menu="@menu/main_navigation" app:itemIconSize="@dimen/navigation_icon_slot"
            app:itemIconTint="@color/navigation_tint" app:itemTextColor="@color/navigation_tint" app:itemRippleColor="@color/marvel_ripple"
            app:labelVisibilityMode="unlabeled" app:itemHorizontalTranslationEnabled="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
